# jot

./: .env  .gitignore  Cargo.toml  Readme.md
migrations/20170511031240_create_notes/: down.sql  up.sql
src/: cli.yml  main.rs  note.rs
