[package]
authors = ["Ross Harrison <rtharrison86@gmail.com>"]
name = "jot"
version = "1.0.0"

[dependencies]
diesel = { version = "0.12.0", features = ["sqlite"] }
diesel_codegen = { version = "0.12.0", features = ["sqlite"] }
dotenv = "0.10.0"
libsqlite3-sys = { version = "=0.7.1", optional = true }

[dependencies.clap]
features = ["yaml"]
version = "2.19.0"

[dependencies.uuid]
features = ["v4", "serde"]
version = "0.5"
